--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "marka-api",
   "version": "1.0.0",
-  "description": "UNEB-compliant report card SaaS API for Ugandan schools",
-  "main": "dist/main.js",
+  "description": "Marka - Report Card SaaS API",
+  "author": "Kasim Lyee",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -17,43 +19,45 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "ts-node prisma/seeds/index.ts"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate -d src/config/database.config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/config/database.config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/config/database.config.ts"
   },
   "dependencies": {
     "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.1",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.3",
-    "@nestjs/passport": "^9.0.3",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/sequelize": "^9.0.0",
-    "@nestjs/throttler": "^3.1.0",
-    "@prisma/client": "^4.14.0",
-    "aws-sdk": "^2.1368.0",
-    "axios": "^1.4.0",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/swagger": "^6.1.3",
+    "@nestjs/throttler": "^6.4.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "aws-sdk": "^2.1249.0",
     "bcrypt": "^5.1.0",
-    "bull": "^4.10.4",
+    "bull": "^4.10.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "crypto": "^1.0.1",
+    "class-validator": "^0.13.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
-    "nodemailer": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pdfkit": "^0.13.0",
-    "prisma": "^4.14.0",
-    "puppeteer": "^19.11.1",
-    "redis": "^4.6.5",
+    "pg": "^8.8.0",
+    "puppeteer": "^19.2.2",
+    "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "twilio": "^4.11.1",
-    "uuid": "^9.0.0",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.5.7",
+    "twilio": "^3.82.0",
+    "typeorm": "^0.3.10",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -62,25 +66,26 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.5.0",
+    "@types/jest": "28.1.8",
     "@types/multer": "^1.4.7",
-    "@types/node": "18.15.11",
-    "@types/nodemailer": "^6.4.7",
-    "@types/passport-jwt": "^3.0.8",
-    "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.11",
-    "@types/uuid": "^9.0.1",
+    "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.6",
+    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-local": "^1.0.34",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.5.0",
+    "jest": "28.1.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "29.0.5",
+    "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   },
   "jest": {
