--- a/.env.example
+++ b/.env.example
@@ -29,12 +29,19 @@ PAYSTACK_PUBLIC_KEYsk_test_xxxxxxxxxxxxxxxxxxxxxxxx=pk_test_xxxxxxxxxxxxxxxxxxxx
 PAYSTACK_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 PAYSTACK_CURRENCY=UGX
 
-# Storage
-STORAGE_PROVIDER=s3
-AWS_ACCESS_KEY_ID=your-access-key-id
-AWS_SECRET_ACCESS_KEY=your-secret-access-key
-AWS_REGION=us-east-1
-AWS_S3_BUCKET=marka-reports
+# Storage Configuration
+STORAGE_PROVIDER=cloudinary
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+CLOUDINARY_FOLDER=marka
+
+# Optional: Folder structure
+CLOUDINARY_STUDENT_PHOTOS_FOLDER=marka/student-photos
+CLOUDINARY_REPORTS_FOLDER=marka/reports
+CLOUDINARY_TEMPLATES_FOLDER=marka/templates
 
 # Email
 SMTP_HOST=smtp.example.com
