--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "migration:revert": "npm run typeorm -- migration:revert -d src/data-source.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.878.0",
     "@eslint/js": "^9.34.0",
     "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.0.0",
@@ -37,16 +38,18 @@
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^9.0.1",
-    "aws-sdk": "^2.1249.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^2.7.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "globals": "^16.3.0",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
@@ -70,7 +73,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
-    "@types/multer": "^1.4.7",
+    "@types/multer": "^1.4.13",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.7",
