Rewriting notification and verification modules again

--- a/.env.example
+++ b/.env.example
@@ -43,13 +43,14 @@ CLOUDINARY_STUDENT_PHOTOS_FOLDER=marka/student-photos
 CLOUDINARY_REPORTS_FOLDER=marka/reports
 CLOUDINARY_TEMPLATES_FOLDER=marka/templates
 
-# Email
-SMTP_HOST=smtp.example.com
+# Email Settings
+SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=noreply@example.com
-SMTP_PASS=your-email-password
-SMTP_FROM=noreply@marka.ug
+SMTP_SECURE=true
+SMTP_USER=no-reply@marka.ug
+SMTP_PASSWORD=your_secure_app_password
+EMAIL_FROM='"Marka Notifications" <no-reply@marka.ug>'
+EMAIL_TEMPLATES_PATH=dist/templates/email
 
 # Twilio
 TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -59,3 +60,11 @@ TWILIO_PHONE_NUMBER=+1234567890
 # Throttler
 THROTTLER_TTL=60
 THROTTLER_LIMIT=100
+
+# Security
+VERIFICATION_JWT_SECRET=your_verification_jwt_secret_here
+VERIFICATION_JWT_EXPIRES_IN=1h
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_here
+
+# Frontend
+FRONTEND_URL=https://app.marka.ug
