--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.878.0",
     "@eslint/js": "^9.34.0",
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -62,6 +63,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
+    "socket.io": "^4.8.1",
     "twilio": "^3.82.0",
     "typeorm": "^0.3.10",
     "typescript-eslint": "^8.40.0",
