Added all email files

--- a/.env.example
+++ b/.env.example
@@ -43,14 +43,21 @@ CLOUDINARY_STUDENT_PHOTOS_FOLDER=marka/student-photos
 CLOUDINARY_REPORTS_FOLDER=marka/reports
 CLOUDINARY_TEMPLATES_FOLDER=marka/templates
 
-# Email Settings
-SMTP_HOST=smtp.office365.com
+# SMTP Configuration
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_SECURE=true
-SMTP_USER=no-reply@marka.ug
-SMTP_PASSWORD=your_secure_app_password
-EMAIL_FROM='"Marka Notifications" <no-reply@marka.ug>'
-EMAIL_TEMPLATES_PATH=dist/templates/email
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+
+# Email Settings
+EMAIL_FROM_NAME=Your App Name
+EMAIL_FROM_EMAIL=noreply@yourapp.com
+EMAIL_REPLY_TO=support@yourapp.com
+
+# Tracking
+EMAIL_TRACKING_ENABLED=true
+EMAIL_TRACKING_DOMAIN=yourapp.com
 
 # Twilio
 TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -65,6 +72,11 @@ THROTTLER_LIMIT=100
 VERIFICATION_JWT_SECRET=your_verification_jwt_secret_here
 VERIFICATION_JWT_EXPIRES_IN=1h
 JWT_REFRESH_SECRET=your_jwt_refresh_secret_here
+EMAIL_SECRET=your-secret-key-for-tokens
 
 # Frontend
 FRONTEND_URL=https://app.marka.ug
+
+# Rate Limiting
+EMAIL_RATE_LIMIT_MAX_EMAILS=100
+EMAIL_RATE_LIMIT_TIME_WINDOW=3600000
