--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "class-validator": "^0.13.2",
     "cloudinary": "^2.7.0",
     "csv-parser": "^3.0.0",
+    "disposable-email-domains": "^1.0.62",
     "dotenv": "^16.0.3",
     "globals": "^16.3.0",
     "handlebars": "^4.7.7",
+    "isomorphic-dompurify": "^2.26.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
