Added sms service

--- a/.env.example
+++ b/.env.example
@@ -59,10 +59,15 @@ EMAIL_REPLY_TO=support@yourapp.com
 EMAIL_TRACKING_ENABLED=true
 EMAIL_TRACKING_DOMAIN=yourapp.com
 
-# Twilio
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=your_auth_token
-TWILIO_PHONE_NUMBER=+1234567890
+# SMS Configuration
+SMS_USERNAME=your_username
+SMS_PASSWORD=your_password
+SMS_DEFAULT_SENDER_ID=YourBrand
+SMS_DEFAULT_PRIORITY=2
+SMS_SANDBOX_MODE=true
+SMS_TIMEOUT=10000
+SMS_MAX_RETRIES=3
+SMS_RETRY_DELAY=1000
 
 # Throttler
 THROTTLER_TTL=60
