Added report card files

--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,6 @@ FRONTEND_URL=https://app.marka.ug
 # Rate Limiting
 EMAIL_RATE_LIMIT_MAX_EMAILS=100
 EMAIL_RATE_LIMIT_TIME_WINDOW=3600000
+
+PDF_UPLOADS_DIR=./uploads/reports
+PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
