--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/bull": "^0.6.3",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -43,6 +44,7 @@
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.2",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cloudinary": "^2.7.0",
@@ -61,7 +63,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
-    "puppeteer": "^19.2.2",
+    "puppeteer": "^19.11.1",
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
